<resources>
    <string name="app_name">Blue Sea Captain</string>
    <string name="signup">إنشاء حساب</string>
    <string name="username">اسم المستخدم</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="have_an_account">لديك حساب؟</string>
    <string name="log_in">تسجيل دخول</string>
    <string name="date_sample">29 أبريل</string>
    <string name="available_seats">مقاعد متوفرة</string>
    <string name="booked">محجوز</string>
    <string name="booked_sample">محجوز 10</string>
    <string name="book">احجز</string>
    <string name="trip_status">حالة الرحلة</string>
    <string name="to_destination">إلى الوجهة</string>
    <string name="add_trip">أضف رحلة</string>
    <string name="start_trip">إبدأ الرحلة</string>
    <string name="arrived">وصلت الرحلة</string>
    <string name="from">من بلد</string>
    <string name="to">إلى بلد</string>
    <string name="invalid_email">invalid email</string>
    <string name="invalid_password">Short password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">تفاصيل الرحلة</string>
    <string name="need_permission">"التطبيق يحتاج صلاحيةالموقع "</string>
    <string name="find_location_needed">فشل في العثور على الموقع, تأكد من تفعيل الموقع</string>
    <string name="fields_cannotbe_empty">fields cannot be empty</string>
    <string name="add_new_trip">هل تريد اضافة الرحلة</string>
    <string name="you_already_have_one_at_theSameDate">انت بل فعل لديك رحله في نفس التاريخ, لا يمكنك اضافة رحلة</string>
    <string name="trip_date">اختار تاريخ الرحله</string>
    <string name="choose_trip_date">اختر تاريخ الرحله</string>

    <string name="uid">PffoIjX6TVUjlRhclNnFQwdC59j1</string>
    <string name="captain_account">\"الرجاء التسجيل في حساب الكابتن هذا: captain@gmail.com, password: abc123\"</string>
    <string name="today">اليوم</string>
    <string name="tomorrow">غداً</string>
    <string name="failed_accesslocation">يتعذر الوصول الى الموقع! تاكد من تفعيل GPS</string>
    <string name="signout">هل تريد تسجيل الخروج</string>
    <string name="choose_trip_location">اختر موقع البدايه و النهايه من فضلك</string>
</resources>

